[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Weapon/Weapon.gd" type="Script" id=1]



[node name="Weapon" type="Sprite"]
rotation = 1.5708
script = ExtResource( 1 )

[node name="AttackRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
[connection signal="area_entered" from="AttackRange" to="." method="_on_attack_range_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
